added route for giga
